<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/item_group_padding_size"
    android:backgroundTint="@color/darkest_gray"
    android:padding="@dimen/item_group_padding_size"
    app:cardCornerRadius="@dimen/twenty_five_dp"
    tools:context=".presentation.ui.fragments.episodes.detail.EpisodeDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/episodes_detail_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/detail_background"
        android:padding="@dimen/twenty_five_dp">

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_five_dp"
            android:fontFamily="@font/passion_one"
            android:textColor="@color/white"
            android:textSize="@dimen/thirty_dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_episode"
            tools:text="@string/item_title_hint" />

        <TextView
            android:id="@+id/detail_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/passion_one"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/thirty_five_sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/item_episode_text" />

        <TextView
            android:id="@+id/was_created_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fourteen_dp"
            android:text="@string/was_created_in"
            android:textColor="@color/gray"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_air_date" />

        <TextView
            android:id="@+id/detail_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/passion_one"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/was_created_in"
            tools:text="@string/item_created_text" />

        <TextView
            android:id="@+id/air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fourteen_dp"
            android:text="@string/air_date"
            android:textColor="@color/gray"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_name" />

        <TextView
            android:id="@+id/detail_air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/passion_one"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_date"
            tools:text="@string/air_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>