<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/item_group_padding_size"
    android:layout_marginTop="@dimen/item_group_padding_size"
    android:layout_marginEnd="@dimen/item_group_padding_size"
    android:backgroundTint="@color/dark_gray"
    app:cardCornerRadius="@dimen/item_group_padding_size">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/episodes_item_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/item_group_padding_size">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="0dp"
            app:layout_constraintRight_toLeftOf="@id/item_episode"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:fontFamily="@font/passion_one"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/item_title_hint" />

        <TextView
            android:id="@+id/item_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/passion_one"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/item_title_text_size"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/item_episode_text" />

        <TextView
            android:id="@+id/was_created_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fourteen_dp"
            android:text="@string/was_created_in"
            android:textColor="@color/gray"
            android:textSize="@dimen/item_status_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_air_date" />

        <TextView
            android:id="@+id/item_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/passion_one"
            android:textColor="@color/white"
            android:textSize="@dimen/item_title_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/was_created_in"
            tools:text="@string/item_created_text" />

        <TextView
            android:id="@+id/air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fourteen_dp"
            android:text="@string/air_date"
            android:textColor="@color/gray"
            android:textSize="@dimen/item_status_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_name" />

        <TextView
            android:id="@+id/item_air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/passion_one"
            android:textColor="@color/white"
            android:textSize="@dimen/item_title_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_date"
            tools:text="@string/air_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>